--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-responsive-fontsize": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
