--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-responsive-fontsize": "^0.5.1"
+    "react-native-paper": "^5.7.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
