--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-otp-textinput": "^1.0.0",
     "react-native-paper": "^5.7.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.5.1",
