--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-select-dropdown": "^3.3.3",
+    "react-native-vector-icons": "^9.2.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
