--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-otp-textinput": "^1.0.0",
     "react-native-paper": "^5.7.0",
     "react-native-responsive-fontsize": "^0.5.1",
